argocd/manifests/talos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talos
  namespace: talos
spec:
  selector:
    app: talos
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
